@@ -5,6 +5,8 @@ CHANGES
 
 - Add *reason* optional parameter to aiohttp.protocol.Response ctor.
 
+- Fix aiohttp.client bug for sending file without content-type.
+
 0.9.2 (10-16-2014)
 ------------------
 
